--- a/exercicios/Desafio10/android.html
+++ b/exercicios/Desafio10/android.html
@@ -103,7 +103,7 @@
     </main>
     
     <footer>
-        <p>Desenvolvido por Diógenes CARCARÁ </p>
+        <p>Desenvolvido por <a href="https://github.com/Diogenes-T1">Diógenes-T1</a> </p>
     
     </footer>
 
