--- a/exercicios/MÓDULO 3/Ex22/fundo06.html
+++ b/exercicios/MÓDULO 3/Ex22/fundo06.html
@@ -4,17 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de Tela</title>
     <style>
         body{
             background-color: black;
             background-image: url("imagens/wallpaper002.jpg");
-            background-position: center top;
+            background-position: center center;
             background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;
+
+            /* Shorthand - background
+            color > image > position > repeat > (size) > attachment
+
+            obs: o size ainda não funciona e deve ser colocado separadamente
+            
+
+            background: black url("imagens/wallpaper002.jpg") center center no-repeat cover fixed;*/
         }
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -29,7 +39,17 @@
 
     <p>
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam ullam officiis aliquid voluptate consectetur provident ducimus iusto quo omnis minima! Sint eos quaerat molestiae dolorem eius deleniti nulla sit pariatur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae nemo sed deserunt tempore, veritatis esse! Accusamus tenetur sit itaque quasi harum, necessitatibus hic saepe, ad consequuntur cumque corporis maiores blanditiis!
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet perferendis harum soluta cum officiis animi quae minus nobis est saepe maxime hic porro, dolores, quam rem corrupti. Debitis, placeat error.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet perferendis harum soluta cum officiis animi quae minus nobis est saepe maxime hic porro, dolores, quam rem corrupti. Debitis, placeat error. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam ullam officiis aliquid voluptate consectetur provident ducimus iusto quo omnis minima! Sint eos quaerat molestiae dolorem eius deleniti nulla sit pariatur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae nemo sed deserunt tempore, veritatis esse! Accusamus tenetur sit itaque quasi harum, necessitatibus hic saepe, ad consequuntur cumque corporis maiores blanditiis!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet perferendis harum soluta cum officiis animi quae minus nobis est saepe maxime hic porro, dolores, quam rem corrupti. Debitis, placeat error. Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque impedit fugiat natus quasi fugit, nesciunt velit similique, facilis non quod alias voluptatem, repellat nisi dignissimos reprehenderit iste amet eveniet error. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos quaerat reprehenderit tempore soluta ut saepe voluptas culpa incidunt dolores voluptatum cumque sunt animi atque, non nihil rem placeat maiores minus! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam, suscipit, impedit amet numquam in explicabo odio laudantium reprehenderit aspernatur, atque veniam provident sed. Aperiam, porro vero sint ducimus quaerat iusto.
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos eos laboriosam magni aperiam voluptatum qui quasi quibusdam, mollitia illum, eaque, minus voluptate voluptas accusantium aliquam similique sequi explicabo quod ab.
+    </p>
+    <h2> Teste </h2>
+    <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero corporis commodi pariatur earum autem magni dignissimos perferendis ut iste? Repellendus neque facere quia. Sed illum beatae facilis quasi culpa. Eum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe assumenda nisi enim error earum obcaecati cumque, corrupti doloribus. Ut facere aperiam quae distinctio possimus voluptate cum suscipit neque, deserunt at? Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur iure, expedita officiis, perspiciatis odit dignissimos animi doloribus impedit quod hic voluptate consequatur cupiditate rem accusamus incidunt? Nam quae mollitia nemo. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex deleniti ducimus debitis nulla unde, necessitatibus numquam reiciendis non deserunt quasi illo perspiciatis totam eveniet dolore amet, error tempora, officia molestias.
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit dolorum iusto incidunt labore minus! Nihil nam veritatis laborum alias eum, voluptatibus nemo autem architecto totam quidem quis, atque ullam expedita!
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae facere repellendus ut qui impedit at maxime iste, necessitatibus voluptatum inventore asperiores ea a placeat alias quaerat ad? Nulla, quia deserunt!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, voluptate doloremque ducimus inventore eius veritatis repellendus, iusto dolorum porro id hic optio impedit numquam repellat iste possimus ut pariatur. Ducimus.
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam atque magnam quia doloremque voluptates fugit, numquam delectus. Minus debitis eum ad consequatur aperiam laboriosam sapiente repudiandae asperiores doloribus eius. Sint? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio explicabo doloremque dolore quam quidem fuga vel incidunt, veniam quia placeat quae, dolores possimus reprehenderit libero. Rem quod ipsa ducimus perspiciatis? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus voluptas voluptatum corrupti asperiores ipsum exercitationem suscipit. Deleniti tenetur, voluptate fugit fugiat assumenda, quidem quia sit temporibus veritatis mollitia praesentium placeat?
     </p>
 </main>
 <body>
