--- a/exercicios/MÓDULO 3/Ex23/tabela002.html
+++ b/exercicios/MÓDULO 3/Ex23/tabela002.html
@@ -12,6 +12,13 @@
         table{
             width: 500px;
             border-collapse: collapse;
+            position: relative;
+        }
+        thead > tr > th{
+            position: sticky;
+            top: -1px;
+            background-color: rgb(65, 62, 62);
+
         }
         tbody > tr:nth-child(2n){
             background-color: lightgray;
@@ -19,6 +26,7 @@
         th, td{
             border: 1px solid black;
             padding: 10px;
+            
         }
         thead, tfoot{
             background-color: rgb(65, 62, 62);
